force-app/main/default/objects/echosign_dev1__Chatter_Settings__c/fields/echosign_dev1__Account_Record_Post__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Account_Record_Post__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Post Chatter updates for Document Cloud agreements on the related Account record.</description>
    <inlineHelpText>Post Chatter updates for Document Cloud agreements on the related Account record.</inlineHelpText>
    <label>Post on Account Record</label>
    <type>Checkbox</type>
</CustomField>