force-app/main/default/objects/echosign_dev1__Chatter_Settings__c/fields/echosign_dev1__Agreement_Record_Post__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Agreement_Record_Post__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Post Chatter updates for Document Cloud agreements on the Agreement record.</description>
    <inlineHelpText>Post Chatter updates for Document Cloud agreements on the Agreement record.</inlineHelpText>
    <label>Post on Agreement Record</label>
    <type>Checkbox</type>
</CustomField>