force-app/main/default/objects/echosign_dev1__Chatter_Settings__c/fields/echosign_dev1__Agreement_Sent_Post__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Agreement_Sent_Post__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Post Chatter update when agreement is sent.</description>
    <inlineHelpText>Post Chatter update when agreement is sent.</inlineHelpText>
    <label>Post when Agreement Sent</label>
    <type>Checkbox</type>
</CustomField>