force-app/main/default/objects/echosign_dev1__Chatter_Settings__c/fields/echosign_dev1__Agreement_Signed_Post__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Agreement_Signed_Post__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Post Chatter update when agreement is signed or approved.</description>
    <inlineHelpText>Post Chatter update when agreement is signed or approved.</inlineHelpText>
    <label>Post when Agreement Signed or Approved</label>
    <type>Checkbox</type>
</CustomField>